small fix for two banner images alignment.
git-svn-id: http://svn.apache.org/repos/asf/portals/jetspeed-2/portal/trunk@711270 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -191,6 +191,13 @@ table {
 #banner {
 	height: 93px;
 	background: url(../images/banner.jpg);
+}
+
+#bannerLeft img {
+    margin: 8px 8px 0px 8px;
+}
+
+#bannerRight img {
     margin: 8px 8px 0px 8px;
 }
 
